Remove unused packages and replace synthetic in MusicBandAdapter  with ViewBinding

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
         <activity
-            android:name=".MainActivity"
+            android:name=".MusicBandListActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,12 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".sample_1.MusicBandListActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".sample_2.MusicPlayerActivity"
-            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
